<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/modifySubMenu"
          android:title="@string/modify_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/spotMapSubMenu"
        android:title="@string/driver_navigation_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/deleteSubMenu"
        android:title="@string/delete_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/shareSubMenu"
        android:title="@string/share_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/passContactSubMenu"
        android:title="@string/driver_mail_settings"
        app:showAsAction="never"/>
    
</menu>