<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment"
    android:background="@color/colorBackground">

    <!--Notification Info-->
    <LinearLayout
        android:id="@+id/notificationLabelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMenuTitle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:elevation="5dp">

        <TextView
            android:id="@+id/notificationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF000000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notificationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationLabelLayout"
        android:background="@color/colorWhite"
        android:elevation="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/firstSetting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/first_setting_label"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:id="@+id/secondSetting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/second_setting_label"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"/>

        <CheckBox
            android:id="@+id/thirdSetting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/third_setting_label"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />

    </LinearLayout>

    <!--UserData Info-->
    <LinearLayout
        android:id="@+id/userDataLabelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notificationLayout"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorMenuTitle"
        android:orientation="vertical"
        android:elevation="5dp">

        <TextView
            android:id="@+id/userDataLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF000000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userDataLabelLayout"
        android:background="@color/colorWhite"
        android:elevation="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <!--Name Layout-->
        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameLabelText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name_label"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userNameData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textStart" />
        </LinearLayout>

        <!--Surname Layout-->
        <LinearLayout
            android:id="@+id/userSurnameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userSurnameLabelText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/surname_label"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userSurnameData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textStart" />
        </LinearLayout>

        <!--Email Layout-->
        <LinearLayout
            android:id="@+id/userMailLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userMailLabelText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/mail_label"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userMailData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textStart" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
